🐟🐌 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -19,18 +19,23 @@
     </style>
   </head>
   <body>
-    <h1>weather mood</h1>
+    <h1>caught in a storm of my favourite things</h1>
     <p>
-      And this is some text in the background.
+      
     </p>
     <!-- script -->
     <script>
       const uniqueRainCharacters = [
-        "&#x1F328",
-        "drops",
-        "falling",
-        "snow",
-        "puddles"
+        "&#x1F63B",
+      "&#x26F7",
+        "&#x1F64F",
+        "&#x1F3C4",
+        "&#x1F992",
+        "&#x1F33B",
+        "&#x1F3D5",
+        "&#x1F3AA",
+        "&#x1F4DA"
+
       ];
       const totalCharacters = 60;
       const offSet = 20;
